feat: add simulations for bitset composition calculation and its vectorized operations